--- a/ParkingLot/appsettings.json
+++ b/ParkingLot/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ParkingDbConnection": "Server=localhost;Port=5432;Database=postgres;User Id=openpg;Password=openpgpwd;Pooling=true;"
+    "ParkingDbConnection": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=openpgpwd;Pooling=true;"
   }
 }
